--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,16 @@ Build Gradle:
     - ./gradlew assemble
 
 Build Docker:
-  image: docker:stable
+  image: docker:20-dind
   stage: build
+  variables:
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
   services:
-    - docker:dind
+    - name: docker:20-dind
+      alias: docker
+      command: [ "--tls=false" ]
   script:
     - docker build . -t githubreports-server:ci
 
