--- a/src/main/resources/specification.yaml
+++ b/src/main/resources/specification.yaml
@@ -1400,8 +1400,16 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CommitSlimDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
         '404':
-          description: Repository not found
+          $ref: '#/components/responses/NotFound'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
 
   /repositories/synchronize/{id}/{tokenAuth}:
     put:
