An example of usage:
private static final Logger logger = Logger.getLogger(<CLASS_NAME>.class.getName());

logger.info|warn|error("...");

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-logging'
+
+	// logging
+	implementation 'org.slf4j:slf4j-api'
+	implementation 'ch.qos.logback:logback-classic'
 
 	//auth jwt
 	implementation 'com.auth0:java-jwt:3.19.1'
